--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -1,17 +1,17 @@
-kind: Service
-apiVersion: v1
-metadata:
-  name: train-schedule-service
-spec:
-  type: NodePort
-  selector:
-    app: train-schedule
-  ports:
-  - protocol: TCP
-    port: 8080
-    nodePort: 8080
+# kind: Service
+# apiVersion: v1
+# metadata:
+#   name: train-schedule-service
+# spec:
+#   type: NodePort
+#   selector:
+#     app: train-schedule
+#   ports:
+#   - protocol: TCP
+#     port: 8080
+#     nodePort: 8080
 
----
+# ---
 
 apiVersion: apps/v1
 kind: Deployment
